# iohp-rs

./: .gitignore  Cargo.toml  README.md  data.json  data_with_sound.json
src/: compress.rs  download_audio.rs  extract_data.rs  lib.rs  scrap.rs  scrap_audio_items.rs  upload_telegram.rs
